# clustering

./: .flake8  .gitignore  .gitmodules  CLAUDE.md  CODE_QUALITY.md  LICENSE  PHASE2_REVERT_SUMMARY.md  PROFILING_RESULTS.md  README.md  next-steps.md  performance-report.md  popmusic-spacefilling.md  pyproject.toml  setup.py  white-paper.md
.claude/: settings.local.json
.github/workflows/: pr.yaml  publish.yaml  test.yml
benchmarks/: README.md  __init__.py  gpu_fcm.md  gpu_pairwise.md  gpu_vat.md  memprobe.py  scale_bench.py
benchmarks/baselines/: baseline_NEX-210200.json  pr1_48k_f64_NEX-210200.json  pr1_ivat_inplace_NEX-210200.json  pr1b_inplace_NEX-210200.json
docs/: bibliography.md  novel-niche.md  novelty-review.md  perf-guidance.md  performance-novelty.md  vat-tsp-prior-art.md  vat-tsp-session2-novelty.md
experiments/: ADVERSARIAL_EVAL_FINDINGS.md  BLOCKWISE_VAT_FINDINGS.md  BORUVKA_VAT_FINDINGS.md  DC_VAT_FINDINGS.md  DC_VAT_SCALING_FINDINGS.md  GAPS_FINDINGS.md  HARDENING_FINDINGS.md  STITCHED_VAT_FINDINGS.md  adversarial_eval.py  autok_eval.py  blockwise_vat.py  boruvka_dgx_spark.py  boruvka_gpu.py  boruvka_vat.py  conivat_constraint_scaling.py  conivat_cython_bench.py  conivat_cython_scaling.py  conivat_scaling.py  dc_vat.py  dc_vat_scaling.py  gpu_vat.py  hardening_eval.py  ivat_minimax_complexity.py  perf_report_figs.py  principled_stitch.py  reverse_delete_lk.py  reverse_delete_opt.py  reverse_delete_tsp.py  stitched_vat.py  vat_tsp.py  vat_tsp_2opt_bench.py  vat_tsp_aco_ga.py  vat_tsp_benchmark.py  vat_tsp_cross.py  vat_tsp_cross_sweep.py  vat_tsp_dgx_scale.py  vat_tsp_dualvat_lk.py  vat_tsp_join.py  vat_tsp_kopt.py  vat_tsp_lk.py  (+11 more)
experiments/figures/: vat_tsp_seqvar_coadj_kroA200.npz
experiments/findings/: ADVERSARIAL_EVAL_FINDINGS.md  BLOCKWISE_VAT_FINDINGS.md  BORUVKA_VAT_FINDINGS.md  CONIVAT_FINDINGS.md  DC_VAT_SCALING_FINDINGS.md  GAPS_FINDINGS.md  HARDENING_FINDINGS.md  IVAT_MINMAX_COMPLEXITY_FINDINGS.md  REVERSE_DELETE_LK_FINDINGS.md  REVERSE_DELETE_OPT_FINDINGS.md  REVERSE_DELETE_TSP_FINDINGS.md  STITCHED_VAT_FINDINGS.md  SUMMARY_REPORT.md  VAT_TSP_2OPT_BENCH_FINDINGS.md  VAT_TSP_ACO_GA_FINDINGS.md  VAT_TSP_BENCHMARK_FINDINGS.md  VAT_TSP_CROSS_FINDINGS.md  VAT_TSP_DGX_SCALE_FINDINGS.md  VAT_TSP_DGX_THREAD_SUMMARY.md  VAT_TSP_DUALVAT_LK_FINDINGS.md  VAT_TSP_FINDINGS.md  VAT_TSP_JOIN_FINDINGS.md  VAT_TSP_KOPT_FINDINGS.md  VAT_TSP_LK_FINDINGS.md  VAT_TSP_MPRIM_FINDINGS.md  VAT_TSP_MPRIM_SWEEP_FINDINGS.md  VAT_TSP_PERF_REPORT_FINDINGS.md  VAT_TSP_RECURSIVE_FINDINGS.md  VAT_TSP_RESLICE_FINDINGS.md  VAT_TSP_SCALE_FINDINGS.md  VAT_TSP_SEQVAR_FINDINGS.md  VAT_TSP_WARMSTART_FINDINGS.md  next-steps.md  performance-report.md  white-paper.md
src/clustering/: __init__.py  core.py  fcm.py  pvat.py  util.py
src/tribbleclustering/: __init__.py  cfcm.pyx  clk.pyx  conivat.py  fcm.py  fuzzycmeans.py  gpu.py  gpu_vat.py  ivatmeans.py  linkernighan.py  lk.py  pcvat.c  pcvat.pyx  pqvat.py  pvat.py  util.py
tests/: conftest.py  demo_data.py  test_batched_prediction.py  test_cluster.py  test_conivat.py  test_convergence_acceleration.py  test_core.py  test_fcm_memory_benchmark.py  test_fcm_memory_optimization.py  test_fcm_optimization.py  test_gpu_fcm.py  test_gpu_ivatmeans.py  test_gpu_pairwise.py  test_gpu_vat.py  test_gpu_vat_dtype.py  test_heapq.py  test_ivat_lower_tri.py  test_ivatmeans_visualization.py  test_lin_kernighan.py  test_pairwise_distances.py  test_reverse_delete_tsp.py  test_simd_optimization.py  test_wrapper_classes.py
