[build-system]
requires = ["setuptools>=61.0", "cython>=0.29.32", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tribble-clustering"
version = "0.2.0"
authors = [
  { name="Scott Phillips", email="polygonguru@gmail.com" },
]
description = "An optimized Visualization Assessment Tendency (VAT/IVAT) and fuzzy clustering (FCM) package"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numba",
    "numpy>=2.4.6",
    "numba-progress>=1.2.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "ucimlrepo>=0.0.7",
    "pandas-stubs~=3.0.3",
    "matplotlib",
    "pytest",
    "black",
    "scipy"
]
# Optional GPU acceleration (CUDA 12.x). Install the wheel matching your CUDA
# toolkit, e.g. `pip install tribble-clustering[gpu]`. Falls back to CPU when
# no CUDA device is present.
gpu = [
    "cupy-cuda12x>=13.0",
]

[project.urls]
"Homepage" = "https://github.com/fundthmcalculus/clustering"
"Bug Tracker" = "https://github.com/fundthmcalculus/clustering/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tribbleclustering = ["*.pyx", "*.c"]

