[build-system]
requires = ["setuptools>=61.0", "cython>=0.29.32", "numpy"]
build-backend = "setuptools.build_meta"

[project]
name = "tribble-clustering"
version = "0.2.0"
authors = [
  { name="Scott Phillips", email="polygonguru@gmail.com" },
]
description = "An optimized Visualization Assessment Tendency (VAT/IVAT) and fuzzy clustering (FCM) package"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numba",
    "numpy>=2.4.6",
    "numba-progress>=1.2.0",
    "matplotlib>=3.10.9",
]

[project.optional-dependencies]
dev = [
    "ucimlrepo>=0.0.7",
    "pandas-stubs~=3.0.3",
    "matplotlib",
    "pytest",
    "black",
    "flake8",
    "Flake8-pyproject",
    "scipy"
]

[project.urls]
"Homepage" = "https://github.com/fundthmcalculus/clustering"
"Bug Tracker" = "https://github.com/fundthmcalculus/clustering/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tribbleclustering = ["*.pyx", "*.c"]

# Code style: Black with default line length (88), matching the `optimizers` repo.
# target-version is pinned to the project's minimum (py311) so Black does not
# infer a newer grammar from requires-python and emit a spurious AST-safety
# warning on older interpreters.
[tool.black]
target-version = ["py311"]

# Tests: wall-clock benchmarks (speedup ratios) are unreliable on shared CI
# runners, so they are marked `benchmark` and deselected by default. Run them
# explicitly with `pytest -m benchmark`. Correctness tests still gate CI.
[tool.pytest.ini_options]
markers = [
    "benchmark: performance benchmark with wall-clock timing assertions (deselected by default)",
]
addopts = "-m 'not benchmark'"

# Lint: flake8 (via Flake8-pyproject), settings copied from the `optimizers` repo.
# max-line-length is 120 while Black formats to 88, so E501 only trips on lines
# Black cannot split. E203 is ignored because Black and pycodestyle disagree on
# whitespace before slice colons.
[tool.flake8]
max-line-length = 120
exclude = ".git,__pycache__,build,dist,.eggs,.tox,.venv,venv,experiments"
extend-ignore = ["E203"]

